// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Input matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="c-iHFHGs decaInput-root"
  >
    <label
      class="c-hHEPWm c-hHEPWm-cNhXCf-size-md decaInput-label"
      for=":r0:"
    >
      Label Text
    </label>
    <div
      class="c-fecgkr c-fecgkr-fEWyJT-size-md c-fecgkr-htQczz-variant-solid c-fecgkr-cycqzJ-pill-false decaInput-wrap"
    >
      <input
        class="c-hJfaMF c-hJfaMF-fOmxiH-variant-solid c-hJfaMF-iTudIJ-size-md c-hJfaMF-cycqzJ-pill-false decaInput-input"
        id=":r0:"
        placeholder="Placeholder Text"
        value=""
      />
    </div>
    <p
      class="c-bdULyd c-bdULyd-RRNal-state-default decaInput-helperText"
    >
      Helper Text
    </p>
  </div>
</DocumentFragment>
`;

exports[`components/Input renders all colors 1`] = `
<DocumentFragment>
  <div
    class="c-iHFHGs decaInput-root"
  >
    <div
      class="c-fecgkr c-fecgkr-fEWyJT-size-md c-fecgkr-htQczz-variant-solid c-fecgkr-cycqzJ-pill-false decaInput-wrap"
    >
      <input
        class="c-hJfaMF c-hJfaMF-fOmxiH-variant-solid c-hJfaMF-iTudIJ-size-md c-hJfaMF-cycqzJ-pill-false decaInput-input"
        id=":r2:"
        value=""
      />
    </div>
  </div>
  <div
    class="c-iHFHGs decaInput-root"
  >
    <div
      class="c-fecgkr c-fecgkr-fEWyJT-size-md c-fecgkr-htQczz-variant-solid c-fecgkr-cycqzJ-pill-false decaInput-wrap"
    >
      <input
        class="c-hJfaMF c-hJfaMF-fOmxiH-variant-solid c-hJfaMF-iTudIJ-size-md c-hJfaMF-cycqzJ-pill-false decaInput-input"
        id=":r3:"
        value=""
      />
    </div>
  </div>
  <div
    class="c-iHFHGs decaInput-root"
  >
    <div
      class="c-fecgkr c-fecgkr-fEWyJT-size-md c-fecgkr-htQczz-variant-solid c-fecgkr-cycqzJ-pill-false decaInput-wrap"
    >
      <input
        class="c-hJfaMF c-hJfaMF-fOmxiH-variant-solid c-hJfaMF-iTudIJ-size-md c-hJfaMF-cycqzJ-pill-false decaInput-input"
        id=":r4:"
        value=""
      />
    </div>
  </div>
  <div
    class="c-iHFHGs decaInput-root"
  >
    <div
      class="c-fecgkr c-fecgkr-fEWyJT-size-md c-fecgkr-htQczz-variant-solid c-fecgkr-cycqzJ-pill-false decaInput-wrap"
    >
      <input
        class="c-hJfaMF c-hJfaMF-fOmxiH-variant-solid c-hJfaMF-iTudIJ-size-md c-hJfaMF-cycqzJ-pill-false decaInput-input"
        id=":r5:"
        value=""
      />
    </div>
  </div>
  <div
    class="c-iHFHGs decaInput-root"
  >
    <div
      class="c-fecgkr c-fecgkr-fEWyJT-size-md c-fecgkr-htQczz-variant-solid c-fecgkr-cycqzJ-pill-false decaInput-wrap"
    >
      <input
        class="c-hJfaMF c-hJfaMF-fOmxiH-variant-solid c-hJfaMF-iTudIJ-size-md c-hJfaMF-cycqzJ-pill-false decaInput-input"
        id=":r6:"
        value=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`components/Input renders all sizes 1`] = `
<DocumentFragment>
  <div
    class="c-iHFHGs decaInput-root"
  >
    <div
      class="c-fecgkr c-fecgkr-dQgSKX-size-sm c-fecgkr-htQczz-variant-solid c-fecgkr-cycqzJ-pill-false decaInput-wrap"
    >
      <input
        class="c-hJfaMF c-hJfaMF-fOmxiH-variant-solid c-hJfaMF-kGUnSj-size-sm c-hJfaMF-cycqzJ-pill-false decaInput-input"
        id=":r7:"
        value=""
      />
    </div>
  </div>
  <div
    class="c-iHFHGs decaInput-root"
  >
    <div
      class="c-fecgkr c-fecgkr-fEWyJT-size-md c-fecgkr-htQczz-variant-solid c-fecgkr-cycqzJ-pill-false decaInput-wrap"
    >
      <input
        class="c-hJfaMF c-hJfaMF-fOmxiH-variant-solid c-hJfaMF-iTudIJ-size-md c-hJfaMF-cycqzJ-pill-false decaInput-input"
        id=":r8:"
        value=""
      />
    </div>
  </div>
  <div
    class="c-iHFHGs decaInput-root"
  >
    <div
      class="c-fecgkr c-fecgkr-jeReyr-size-lg c-fecgkr-htQczz-variant-solid c-fecgkr-cycqzJ-pill-false decaInput-wrap"
    >
      <input
        class="c-hJfaMF c-hJfaMF-fOmxiH-variant-solid c-hJfaMF-iTudIJ-size-lg c-hJfaMF-cycqzJ-pill-false decaInput-input"
        id=":r9:"
        value=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`components/Input renders all variants 1`] = `
<DocumentFragment>
  <div
    class="c-iHFHGs decaInput-root"
  >
    <div
      class="c-fecgkr c-fecgkr-fEWyJT-size-md c-fecgkr-htQczz-variant-solid c-fecgkr-cycqzJ-pill-false decaInput-wrap"
    >
      <input
        class="c-hJfaMF c-hJfaMF-fOmxiH-variant-solid c-hJfaMF-iTudIJ-size-md c-hJfaMF-cycqzJ-pill-false decaInput-input"
        id=":ra:"
        value=""
      />
    </div>
  </div>
  <div
    class="c-iHFHGs decaInput-root"
  >
    <div
      class="c-fecgkr c-fecgkr-fEWyJT-size-md c-fecgkr-cycqzJ-pill-false c-fecgkr-dBEtCv-cv decaInput-wrap"
    >
      <input
        class="c-hJfaMF c-hJfaMF-iTudIJ-size-md c-hJfaMF-cycqzJ-pill-false decaInput-input"
        id=":rb:"
        value=""
      />
    </div>
  </div>
</DocumentFragment>
`;
